# Sistema_TCC_luciana_CPP_Server_Arduino

./: README.md  build server no Ubuntu.txt  build server no Windows.txt
Client_Simulador/: CMakeLists.txt  leitura.txt  main.cpp
Cliente_Arduino/MiniWifi/: MiniWifi.ino
Cliente_Arduino/serial_test/: serial_test.ino
Exemplos/WeemosD1Mini_Conect/: WeemosD1Mini_Conect.ino
MeanShiftCluster/: MeanShiftCluster.m  testMeanShift.m
Pos_Processamento/: test.db  test.sqbpro  teste_sqlite.m
Pos_Processamento/Barbaro/: FaseA.m  PAdados.mat  PBdados.mat  QAdados.mat  QBdados.mat  chamada.m  dadossss.m  deltas.m  deltasA.m  eventos.m  m02.m  salvarDados.m  testMeanShift.m
Pos_Processamento/Cleaner Python/: cleaner.py  matlab_matrix.mat
Server/: CMakeLists.txt  main.cpp  sqlite3pp.h
